pages bottom-navs

--- a/pages/about.html
+++ b/pages/about.html
@@ -460,7 +460,7 @@
                 </div>
 
                 <!-- BOTTOM FOOTER -->
-                <div class="footer-bottom">
+                <div id="footer-bottom" class="footer-bottom">
                     <img src="../img/shakex-html-logo.png" loading="lazy" alt="Shakex Sempe Web Developer logo">
 
                     <!-- COPYRIGHT ITEM -->
@@ -525,15 +525,30 @@
 
     <!-- BOTTOM NAVIGATION -->
     <div class="bottom-nav" id="bottom-nav">
-        <figure class="link-item io-item item io-item-2">
-            <a href="../index.html"><i class="fas fa-house"></i></a>
-        </figure>
+
         <figure class="link-item io-item item io-item-1">
-            <a href="#"><i class="fas fa-arrow-up"></i></a>
+            <a href="#contact" title="Contact Info">
+                <img class="icon" src="../icons/outline/icons8-envelope-48-light.png" height="48" width="48"
+                    alt="envelope icon">
+            </a>
         </figure>
+
+        <figure class="link-item io-item item io-item-2">
+            <a href="../index.html" title="Home">
+                <img class="icon" src="../icons/outline/icons8-home-32-outline.png" height="32" width="32"
+                    alt="home page icon">
+            </a>
+        </figure>
+
         <figure class="link-item io-item item io-item-3">
-            <a href="#contact"><i class="fas fa-envelope"></i></a>
+
+            <a title="Footer" href="#footer-bottom">
+                <img class="icon" src="../icons/outline/icons8-info-squared-48-light.png" height="48" width="48"
+                    alt="four squares icon">
+            </a>
+
         </figure>
+
     </div>
 
 </body>
