.section-title btn

--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
           <img class="section-title-image" src="img/laptop-2.jpg" loading="lazy" alt="Keyboard">
           <h3>immersive Interface &<br>Engaging Experience</h3>
           <p>appealing user interface & <br>interactive user experience</p>
-          <a href="pages/work.html" class="btn btn-light">projects page
+          <a href="pages/work.html" class="btn btn-light">my projects
             <img src="icons/outline/icons8-link-48-dark.png" height="48" width="48" alt="double-right icon" class="icon">
           </a>
         </div>
