--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             <div class="item-content">
               <figure class="item-image">
                 <picture>
-                  <img src="img/orich-hero.png" width="350" height="160" alt="Orich Trading & Projects logo">
+                  <img src="img/orich-hero.png" width="350" height="199" alt="Orich Trading & Projects hero">
                 </picture>
               </figure>
             </div>
