--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             <div class="item-content">
               <figure class="item-image">
                 <picture>
-                  <img src="img/orich-desktop-hero.png" loading="lazy" width="500" height="222" alt="Orich Trading & Projects hero">
+                  <img src="img/orich-desktop-hero.png" loading="lazy" width="500" height="222" alt="Orich Trading & Projects Homepage">
                 </picture>
               </figure>
             </div>
@@ -514,7 +514,7 @@
             <div class="item-content">
               <figure class="item-image">
                 <picture>
-                  <img src="img/munch_hero.png" loading="lazy" width="350" height="191" alt="Munch Up logo">
+                  <img src="img/munch-desktop.png" loading="lazy" width="600" height="263" alt="Munch Up logo">
                 </picture>
               </figure>
             </div>
