work items desktop

--- a/pages/work.html
+++ b/pages/work.html
@@ -235,14 +235,15 @@
                 </div>
 
                 <div class="work-container">
-                    <!-- ITEM 1 -->
+
+                    <!-- ITEM 1 ORICH -->
                     <div class="item io-item">
                         <!-- FLEX: TITLE + CONTENT -->
                         <div class="item-flex-container">
                             <div class="item-content">
                                 <figure class="item-image">
-                                    <img src="../img/orich-hero.png" width="500" height="228"
-                                        alt="Orich Trading & Projects logo">
+                                    <img src="../img/orich-desktop-hero.png" width="500" height="228"
+                                        alt="Orich Trading & Projects Homepage">
                                 </figure>
                             </div>
                             <div class="item-header">
@@ -268,6 +269,7 @@
 
                         </div>
                     </div>
+
                     <!-- ITEM 2 -->
                     <div class="item io-item">
                         <!-- FLEX: TITLE + CONTENT -->
@@ -275,7 +277,7 @@
                             <div class="item-content">
                                 <figure class="item-image">
                                     <img src="../img/hlavutelo_600.png" width="600" height="274"
-                                        alt="Orich Trading & Projects logo">
+                                        alt="hlavutelo Trading & Projects logo">
                                 </figure>
                             </div>
                             <div class="item-header">
