footer-top icons

--- a/index.html
+++ b/index.html
@@ -827,6 +827,7 @@
       
       <!-- TOP FOOTER = SOCIAL MEDIA + CONTACT FORM -->
       <div class="footer-top">
+
         <!-- SOCIAL MEDIA LINKS -->
         <div class="socialMedia-links">
           <h2 data-scroll title="social media links" class="footer-section-title">my links</h2>
@@ -843,7 +844,7 @@
               <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title="linkedin" data-icon="linkedin"
                 target="_blank">
                 <img src="icons/solid/icons8-linkedin-48-light.png" height="48" width="48" alt="Linkedin logo" class="icon">
-                boitumelo Sempe
+              B.Sempe
               </a>
             </div>
 
