--- a/pages/work.html
+++ b/pages/work.html
@@ -594,68 +594,102 @@
                 <!-- TOP FOOTER -->
                 <div class="footer-top">
                     <!-- SOCIAL MEDIA LINKS -->
-                    <div class="socialMedia-links">
-                        <h2 data-scroll title="social media links" class="footer-section-title">my links</h2>
-                        <div class="links-grid">
-                            <!-- LINKEDIN -->
-                            <div class="socialMedia-item io-item linkedin">
-                                <!-- <i class="fas fa-link link-icon"></i> -->
-                                <p class="link-icon">linkedin</p>
-                                <i class="fab fa-linkedin-in bg-i"></i>
-                                <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title="linkedin"
-                                    data-icon="linkedin" target="_blank">
-                                    <i class="fab fa-linkedin-in"></i>boitumelo Sempe
-                                </a>
-                            </div>
-                            <!-- GIT-HUB -->
-                            <div class="socialMedia-item io-item github">
-                                <i class="fab fa-github bg-i"></i>
-                                <p class="link-icon">github</p>
-                                <a href="https://github.com/ShakexSempe" title="github" data-icon="github"
-                                    target="_blank">
-                                    <i class="fab fa-github"></i>ShakexSempe
-                                </a>
-                            </div>
-                            <!-- CODE-PEN-->
-                            <div class="socialMedia-item io-item codepen">
-                                <i class="fab fa-codepen bg-i"></i>
-                                <p class="link-icon">codePen</p>
-                                <a href="https://codepen.io/bSempe" title="freeCodecamp" data-icon="codepen"
-                                    target="_blank">
-                                    <i class="fab fa-codepen"></i>@bsempe
-                                </a>
-                            </div>
-                            <!-- FREE CODE CAMP -->
-                            <div class="socialMedia-item io-item fcc">
-                                <i class="fab fa-free-code-camp bg-i"></i>
-                                <p class="link-icon">freeCodeCamp</p>
-                                <a href="https://www.freecodecamp.org/boitumelo-sempe" title="freeCodecamp"
-                                    data-icon="FCC" target="_blank">
-                                    <i class="fab fa-free-code-camp"></i>boitumelo sempe
-                                </a>
-                            </div>
-                            <!-- FRONT-END-MENTOR -->
-                            <div class="socialMedia-item io-item fem">
-                                <i class="fas fa-anchor bg-i"></i>
-                                <p class="link-icon">front-end-mentor</p>
-                                <a href="https://www.frontendmentor.io/profile/ShakexSempe" title="font-end-mentor"
-                                    data-icon="FCC" target="_blank">
-                                    <i class="fas fa-anchor"></i>@ShakexSempe
-                                </a>
-                            </div>
-                            <!-- TWITTER -->
-                            <div class="socialMedia-item io-item twitter">
-                                <i class="fab fa-twitter bg-i"></i>
-                                <p class="link-icon">twitter</p>
-                                <a href="https://twitter.com/Shake_x11" title="twitter" data-icon="twitter"
-                                    target="_blank">
-                                    <i class="fab fa-twitter"></i>@shake_x11
-                                </a>
-                            </div>
-                        </div>
+                    <!-- SOCIAL MEDIA LINKS -->
+            <div class="socialMedia-links">
+                <h2 data-scroll title="social media links" class="footer-section-title">my links</h2>
 
+                <div class="links-grid">
+
+                    <!-- LINKEDIN -->
+                    <div class="socialMedia-item io-item linkedin">
+                        <div class="item-title">
+                            <h3>linkedin</h3>
+                            <img class="icon title-icon" src="../icons/solid/icons8-linkedin-48-light.png" height="48"
+                                width="48" alt="Linkedin logo">
+                        </div>
+                        <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title="linkedin"
+                            data-icon="linkedin" target="_blank">
+                            <img src="../icons/solid/icons8-linkedin-48-light.png" height="48" width="48" alt="Linkedin logo"
+                                class="icon">
+                            boitumelo Sempe
+                        </a>
                     </div>
-                    <!-- end of social media links -->
+
+                    <!-- GIT-HUB -->
+                    <div class="socialMedia-item io-item github">
+                        <div class="item-title">
+                            <h3>Github</h3>
+                            <img class="icon title-icon" src="../icons/solid/icons8-github-48-light.png" height="48" width="48"
+                                alt="Github logo">
+                        </div>
+                        <a href="https://github.com/ShakexSempe" title="github" data-icon="github" target="_blank">
+                            <img src="../icons/solid/icons8-github-48-light.png" height="48" width="48" alt="Github logo"
+                                class="icon">
+                            ShakexSempe
+                        </a>
+                    </div>
+
+                    <!-- CODE-PEN-->
+                    <div class="socialMedia-item io-item codepen">
+                        <div class="item-title">
+                            <h3>Codepen</h3>
+                            <img class="icon title-icon" src="../icons/solid/icons8-codepen-50-light.png" height="50"
+                                width="50" alt="Codepen logo">
+                        </div>
+                        <a href="https://codepen.io/bSempe" title="freeCodecamp" data-icon="codepen" target="_blank">
+                            <img src="../icons/solid/icons8-codepen-50-light.png" height="50" width="50" alt="Codepen logo"
+                                class="icon">
+                            @bsempe
+                        </a>
+                    </div>
+
+                    <!-- FREE CODE CAMP -->
+                    <div class="socialMedia-item io-item fcc">
+                        <div class="item-title">
+                            <h3>free-code-camp</h3>
+                            <img class="icon title-icon" src="../icons/solid/icons8-freecodecamp-48-light.png" height="48"
+                                width="48" alt="free-code-camp logo">
+                        </div>
+                        <a href="https://www.freecodecamp.org/boitumelo-sempe" title="freeCodecamp" data-icon="FCC"
+                            target="_blank">
+                            <img class="icon" src="../icons/solid/icons8-freecodecamp-48-light.png" height="48" width="48">
+                            b. sempe
+                        </a>
+                    </div>
+
+                    <!-- FRONT-END-MENTOR -->
+                    <div class="socialMedia-item io-item fem">
+                        <div class="item-title">
+                            <h3>front-end-mentor</h3>
+                            <img class="icon title-icon" src="../icons/solid/icons8-anchor-48-light.png" height="48" width="48"
+                                alt="anchor">
+                        </div>
+                        <a href="https://www.frontendmentor.io/profile/ShakexSempe" title="font-end-mentor" data-icon="FCC"
+                            target="_blank">
+                            <img class="icon" src="../icons/solid/icons8-anchor-48-dark.png" height="48" width="48"
+                                alt="anchor">
+                            @ShakexSempe
+                        </a>
+                    </div>
+
+                    <!-- TWITTER -->
+                    <div class="socialMedia-item io-item twitter">
+                        <div class="item-title">
+                            <h3>twitter</h3>
+                            <img class="icon title-icon" src="../icons/solid/icons8-twitter-48-light.png" height="48"
+                                width="48" alt="twitter logo">
+                        </div>
+                        <a href="https://twitter.com/Shake_x11" title="twitter" data-icon="twitter" target="_blank">
+                            <img class="icon" src="../icons/solid/icons8-twitter-48-light.png" height="48" width="48"
+                                alt="twitter logo">
+                            @shake_x11
+                        </a>
+                    </div>
+
+                </div>
+
+            </div>
+
                     <!-- contact form -->
                     <form class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com"
                         method="POST">
