--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
   <script src="js/app.js" defer></script>
 
   
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500&family=Montserrat:wght@200;500;700&display=swap"
-    rel="stylesheet">
+    rel="stylesheet"> -->
 
   <!-- STYLES -->
   <style>
