--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <!-- STYLES -->
   <style>
     html {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Content', sans-serif;
     }
 
     /* LOADER SCREEN */
