--- a/index.html
+++ b/index.html
@@ -542,19 +542,19 @@
           </div>
         </div>
 
-        <!-- HLAVUTELO -->
+        <!-- LEGAL -->
         <div class="item io-item">
           <!-- FLEX: TITLE + CONTENT -->
           <div class="item-flex-container">
             <div class="item-content">
               <figure class="item-image">
                 <picture>
-                  <img src="img/hlavutelo_600.png" width="350" height="159" alt="Hlavutelo Trading & projects">
+                  <img src="img/legal-template.png" width="500" height="222" alt="Hlavutelo Trading & projects">
                 </picture>
               </figure>
             </div>
             <div class="item-header">
-              <h3 class="item-title">hlavutelo Trading & projects&trade;</h3>
+              <h3 class="item-title">Law firm website template</h3>
               <div class="item-description">
                 <p>fully responsive website featuring: <br>
                   Direct email & call links. <br>
@@ -562,11 +562,11 @@
                 </div>
               <div class="item-cta">
 
-                <a href="https://github.com/ShakexSempe/hlavutelo" class="cta-secondary" target="_blank">repository
+                <a href="https://shakexsempe.github.io/mkhawana-legal/" class="cta-secondary" target="_blank">repository
                     <img src="icons/solid/icons8-code-24-dark.png" height="24" width="24" alt="code icon" class="icon">
                 </a>
 
-                <a href="https://shakexsempe.github.io/hlavutelo/" class="cta-primary" target="_blank">visit page
+                <a href="https://mkhawana-legal.netlify.app/" class="cta-primary" target="_blank">visit page
                   <img src="icons/outline/icons8-right-button-48-light.png" height="48" width="48" alt="right button icon" class="icon">
                 </a>
               </div>
