--- a/pages/work.html
+++ b/pages/work.html
@@ -374,7 +374,7 @@
                         <div class="item-flex-container">
                             <div class="item-content">
                                 <figure class="item-image">
-                                    <img src="../img/legal-template.png" width="500" height="284" alt="Thato Sempe logo">
+                                    <img src="../img/legal-template.png" width="500" height="222" alt="mkhawana-legal logo">
                                 </figure>
                             </div>
                             <div class="item-header">
