--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <!-- META AUTHOR -->
   <meta name="author" content="Boitumelo Shakex Sempe">
   <!-- PRELOAD ITEMS -->
+  <link rel="preload" href="fonts/Montserrat-VariableFont_wght.woff2" as="woff2">
   <link rel="preload" href="css/style.css" as="style" />
   <link rel="preload" href="js/app.js" as="script" />
   <link rel="preload" href="hero/hero-mobile.webp" as="image/webp" media="(max-width: 500px)" fetchpriority="high">
