--- a/pages/about.html
+++ b/pages/about.html
@@ -38,19 +38,37 @@
     <link rel="icon" type="image/png" sizes="96x96" href="../icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../icons/favicon-16x16.png">
     <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
+    
+    <!-- STYLESHEET -->
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- JAVASCRIPT -->
+    <script src="../js/app.js" defer></script>
+
+    <!-- JQUERY LOADER -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous" defer referrerpolicy="no-referrer"></script>
-    <script src="../js/app.js" defer></script>
 
 </head>
 
 <body>
+
+    <!-- LOADER -->
+    <div class="loader_bg">
+        <div id="logo">
+            <div class="box">
+                <div class="inbox inbox-1"></div>
+                <div class="inbox inbox-2"></div>
+            </div>
+            <div class="title">
+                <h1>Shakex<span>Sempe</span></h1>
+                <p>Web Developer</p>
+            </div>
+        </div>
+    </div>
 
     <!-- HEADER -->
     <header id="header" data-header class="header">
@@ -550,6 +568,13 @@
         </figure>
 
     </div>
+
+    <!-- PRELOADER SCRIPT -->
+    <script>
+        setTimeout(function () {
+            $('.loader_bg').fadeToggle();
+        }, 3500);
+    </script>
 
 </body>
 
