--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
   <!--  -->
   <!-- META DESCRIPTION -->
   <meta name="description"
-    content="South Africa based Website Developer. I create Homepages, Landing pages and basic websites for businesses & professionals to showcase their services, projects and products.">
+    content="South Africa based Website Developer. I code Homepages, Landing pages and basic websites for businesses & professionals to showcase their services, projects and products.">
   <!-- META KEYWORDS -->
   <meta name="keywords"
-    content="responsive web design, user interface, UI, user experience, UX, homepage, landing page, website design, website development, seo, freelance,  web hosting, domain registration, ">
+    content="Responsive web design, user interface, UI, user experience, UX, homepage, landing page, website design, website development, seo, freelance,  web hosting, domain registration, ">
   <!-- META AUTHOR -->
   <meta name="author" content="Boitumelo Shakex Sempe">
+  
   <!-- PRELOAD ITEMS -->
   <link rel="preload" href="fonts/Montserrat-VariableFont_wght.woff2" as="font" type="font/woff2" crossorigin="crossorigin">
   <link rel="preload" href="css/style.css" as="style" />
@@ -32,8 +33,14 @@
   <link rel="preload" href="img/hero_450.jpg" as="image" media="(max-width: 450px)">
   <link rel="preload" href="img/hero_1900.jpg" as="image" media="(min-width: 450.1px)">
 
+  <!-- STYLESHEET -->
+  <link rel="stylesheet" href="css/style.css" />
+  <!-- JAVASCRIPT -->
+  <script src="js/app.js" defer></script>
+  <script src="js/dialog.js" defer></script>
+  <script src="js/projects.js" defer></script>
+
   <!-- FAVICON -->
-  <!-- <link rel="shortcut icon" href="icons/favicon.ico"> -->
   <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="icons/apple-icon-72x72.png">
@@ -49,11 +56,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
   <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
 
-  <!-- STYLESHEET -->
-  <link rel="stylesheet" href="css/style.css" />
-  <!-- JAVASCRIPT -->
-  <script src="js/projects.js" defer></script>
-  <script src="js/app.js" defer></script>
+  
 
 </head>
 
