--- a/pages/skills.html
+++ b/pages/skills.html
@@ -22,6 +22,25 @@
         content="responsive web design, user interface, UI, user experience, html, css, javascript, accessibility, website design, website development, seo, freelance,  web hosting, domain registration, ">
     <!-- META AUTHOR -->
     <meta name="author" content="Boitumelo Shakex Sempe">
+
+    <!-- PRELOAD ITEMS -->
+    <link rel="preload" href="fonts/Montserrat-VariableFont_wght.woff2" as="font" type="font/woff2"
+      crossorigin="crossorigin">
+    <link rel="preload" href="../css/style.css" as="style" />
+    <link rel="preload" href="../js/app.js" as="script" />
+    <link rel="preload" href="hero/hero-mobile.webp" as="image" media="(max-width: 500px)" fetchpriority="high">
+    <link rel="preload" href="hero/hero-desktop.webp" as="image" media="(min-width: 500.1px)" fetchpriority="high">
+    <link rel="preload" href="img/hero_450.jpg" as="image" media="(max-width: 450px)">
+    <link rel="preload" href="img/hero_1900.jpg" as="image" media="(min-width: 450.1px)">
+
+    <!-- STYLESHEET -->
+    <link rel="stylesheet" href="../css/style.css" />
+
+    <!-- JAVASCRIPT -->
+    <script src="../js/dialog.js" defer></script>
+    <script src="../js/app.js" defer></script>
+
+
     <!-- FAVICON -->
     <link rel="apple-touch-icon" sizes="57x57" href="../icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="../icons/apple-icon-60x60.png">
@@ -37,15 +56,8 @@
     <link rel="icon" type="image/png" sizes="96x96" href="../icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../icons/favicon-16x16.png">
     <meta name="msapplication-TileImage" content="../icons/ms-icon-144x144.png">
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- JAVASCRIPT -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-        crossorigin="anonymous" defer referrerpolicy="no-referrer"></script>
-    <script src="../js/app.js" defer></script>
+    
+    
 
 </head>
 
