--- a/pages/skills.html
+++ b/pages/skills.html
@@ -248,14 +248,15 @@
           <div class="skills-intro">
 
             <article class="skills-article">
-              <p>
-                I'm a Front-End Web Developer focused on Responsive Web Design & User Experience.<br>
-                I code webpages that are: <br>
-                <span>Accessible</span> via HTML-5 semantic markup and SEO techniques,<br>
-                <span>Immersive</span> using Sass preprocessed CSS-3 stylesheets and <br>
-                <span>Engaging</span> via Javascript algorithms.
-                <br><br>
+              
+              <p>I'm a Front-End Web Developer focused on Responsive Web Design & User Experience.<br>
+                I code webpages that are: </p>
+  
+              <p><strong>Accessible</strong> via HTML-5 semantic markup and SEO techniques,<br>
+                <strong>Immersive</strong> using Sass preprocessed CSS-3 stylesheets and <br>
+                <strong>Engaging</strong> via Javascript algorithms.
               </p>
+
             </article>
 
             <div class="skills-icons io-item">
