--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
             
           </article>
 
+          <!-- SKILLS ICONS -->
           <div class="skills-icons io-item">
 
             <div class="skills-icon-item">
@@ -275,7 +276,7 @@
                 </button>
                 <h3>HTML 5</h3>
                 <p>semantic markup</p>
-                <button class="modal-close">close</button>
+                <button class="modal-close modal-btn">close</button>
 
               </dialog>
 
@@ -291,7 +292,7 @@
                 </button>
                 <h3>CSS 3</h3>
                 <p>sass stylesheet</p>
-                <button class="modal-close">close</button>
+                <button class="modal-close modal-btn">close</button>
                 
               </dialog>
 
@@ -306,7 +307,7 @@
                 </button>
                 <h3>Javascript</h3>
                 <p>Basic algorithms<p>
-                <button class="modal-close">close</button>
+                <button class="modal-close modal-btn">close</button>
 
               </dialog>
             </div>
