--- a/pages/skills.html
+++ b/pages/skills.html
@@ -271,7 +271,7 @@
                 </button>
                 <h3>HTML 5</h3>
                 <p>semantic markup</p>
-                <button class="modal-close">close</button>
+                <button class="modal-close modal-btn">close</button>
 
               </dialog>
 
@@ -287,7 +287,7 @@
                 </button>
                 <h3>CSS 3</h3>
                 <p>sass stylesheet</p>
-                <button class="modal-close">close</button>
+                <button class="modal-close modal-btn">close</button>
                 
               </dialog>
 
@@ -302,7 +302,7 @@
                 </button>
                 <h3>Javascript</h3>
                 <p>Basic algorithms<p>
-                <button class="modal-close">close</button>
+                <button class="modal-close modal-btn">close</button>
 
               </dialog>
             </div>
