skills-intro dialog

--- a/index.html
+++ b/index.html
@@ -251,12 +251,13 @@
             <article class="skills-article">
 
               <p>I'm a Front-End Web Developer focused on Responsive Web Design & User Experience.<br>
-                I code webpages that are: </p>
-
-              <p><strong>Accessible</strong> via HTML-5 semantic markup and SEO techniques,<br>
-                <strong>Immersive</strong> using Sass preprocessed CSS-3 stylesheets and <br>
-                <strong>Engaging</strong> via Javascript algorithms.
+                I code webpages that are: <br>
+                <a href="#skills" class="modal-link"  id="html-modal">Accessible</a> via HTML-5 semantic markup and SEO techniques,<br>
+                <a href="#skills" class="modal-link"  id="css-modal">Immersive</a> using Sass preprocessed CSS-3 stylesheets and <br>
+                <a href="#skills" class="modal-link"  id="js-modal">Engaging</a> via Javascript algorithms.
               </p>
+
+              <a href="pages/skills.html" class="page-link"><img src="icons/outline/icons8-link-24-dark.png" alt="link icon" class="icon"> skills page</a>
 
             </article>
 
@@ -265,7 +266,7 @@
 
               <!-- SKILLS ICON HTML -->
               <div class="skills-icon-item">
-                <svg id="html-modal" fill="#29323c" height="200px" width="200px" version="1.1" id="Capa_1"
+                <svg  fill="#29323c" height="200px" width="200px" version="1.1" id="Capa_1"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                   viewBox="0 0 58.00 58.00" xml:space="preserve" stroke="#29323c" stroke-width="0.057999999999999996">
                   <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -302,7 +303,7 @@
               <!-- SKILLS ICON CSS -->
               <div class="skills-icon-item">
 
-                <svg id="css-modal" fill="#29323c" height="200px" width="200px" version="1.1" id="Capa_1"
+                <svg  fill="#29323c" height="200px" width="200px" version="1.1" id="Capa_1"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 58 58"
                   xml:space="preserve" stroke="#29323c" stroke-width="0.00058">
                   <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -336,7 +337,7 @@
 
               <!-- SKILLS ICON JS-->
               <div class="skills-icon-item">
-                <svg id="js-modal" fill="#29323c" height="200px" width="200px" version="1.1" id="Capa_1"
+                <svg  fill="#29323c" height="200px" width="200px" version="1.1" id="Capa_1"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 58 58"
                   xml:space="preserve" stroke="#29323c" stroke-width="0.00058">
                   <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
