skills section strong

--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@
 
               <p>I'm a Front-End Web Developer focused on Responsive Web Design & User Experience.<br>
                 I code webpages that are: <br>
-                <a href="#skills" class="modal-link"  id="html-modal">Accessible</a> via HTML-5 semantic markup and SEO techniques,<br>
-                <a href="#skills" class="modal-link"  id="css-modal">Immersive</a> using Sass preprocessed CSS-3 stylesheets and <br>
-                <a href="#skills" class="modal-link"  id="js-modal">Engaging</a> via Javascript algorithms.
+                <strong >Accessible</strong> via HTML-5 semantic markup and SEO techniques,<br>
+                <strong >Immersive</strong> using Sass preprocessed CSS-3 stylesheets and <br>
+                <strong >Engaging</strong> via Javascript algorithms.
               </p>
 
               <a href="pages/skills.html" class="page-link"><img src="icons/outline/icons8-link-24-dark.png" alt="link icon" class="icon"> skills page</a>
@@ -345,6 +345,7 @@
 
     </section>
 
+    
     <!-- WORK / PORTFOLIO -->
     <section id="work" class="link-section">
 
@@ -953,6 +954,7 @@
       </div>
     </section>
 
+    
   </main>
 
   <!-- BOTTOM NAVIGATION -->
