about section btns

--- a/pages/about.html
+++ b/pages/about.html
@@ -81,7 +81,7 @@
 
                 <!-- LOGO -->
                 <div class="logo">
-                    <a href="#home" title="Shakex Sempe" class="scroll-link">
+                    <a href="../index.html" title="Shakex Sempe" class="scroll-link">
                         <p>shakex<span>Sempe</span></p>
                     </a>
                 </div>
@@ -262,7 +262,6 @@
                                     Relations graduate and Front-End Web
                                     Developer specializing in Responsive Web Design and User Experience.
                                 </p>
-                                <a href="mailto:bshakex@gmail.com?subject=CV Request" class="btn btn-dark cv-btn">Request CV<i class="fas fa-envelope"></i></a>
                             </div>
                             <div class="article-body">
 
