--- a/index.html
+++ b/index.html
@@ -352,7 +352,8 @@
         <div class="skill-section-title section-title-1">
           <img class="section-title-image" src="img/keyboard.jpg" loading="lazy" alt="Keyboard">
           <h3>web accessibility & <br> responsive web design</h3>
-          <p>User friendly websites <br> that adapt to all devices.</p>
+          <p>User friendly and Search-Engine-Optimized websites coded to adapt to device sizes & user settings.</p>
+          <p></p>
 
           <a href="pages/skills.html#section-1" class="btn btn-light">skills page
             <img src="icons/outline/icons8-link-48-dark.png" height="48" width="48" alt="double right icon"
@@ -692,11 +693,6 @@
 
     </section>
 
-
-    
-
-    
-
     <!-- SKILLS MENU CONTAINER : INTERPERSONAL -->
     <div class="skill-section-container">
 
@@ -715,7 +711,6 @@
       </div>
 
     </div>
-
 
     <!--PROJECTS SECTION-->
     <section class="link-section" id="projects">
