--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
       <!-- HERO TITLE -->
       <div class="grid-title ">
         <div class="content-title">
-          <h1>Front-End Web Developer</h1>
           <h2>Boitumelo<span> Shakex</span> Sempe</h2>
+          <h1>Front-End <br> <span>Web Developer</span></h1>
         </div>
 
 
