--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="image" property="og:image" content="https://shakexsempe.netlify.app/img/shakex-html-logo.png">
 
   <!-- TITLE -->
-  <title>Web Design & Front-End Development || Portfolio</title>
+  <title>Web Design & Development || Portfolio</title>
   <!--  -->
   <!-- META DESCRIPTION -->
   <meta name="description"
@@ -200,8 +200,9 @@
       <!-- HERO TITLE -->
       <div class="grid-title ">
         <div class="content-title">
-          <h2>Boitumelo<span> Shakex</span> Sempe</h2>
-          <h1>Front-End <br> <span>Web Developer</span></h1>
+          <h1>Boitumelo<span> Shakex</span> Sempe</h1>
+          <!-- <h2>Front-End <br> <span>Web Developer</span></h2> -->
+          <h2><span>Front-End</span> <br>Web Developer</h2>
         </div>
 
 
