--- a/pages/about.html
+++ b/pages/about.html
@@ -214,8 +214,10 @@
             <div class="grid-title ">
 
                 <div class="content-title">
-                    <h1>Front-End Web Developer</h1>
-                    <h2>Boitumelo<span> Shakex</span> Sempe</h2>
+
+                    <h1><span> Boitumelo Shakex Sempe</span></h1>
+                    <h2>Front-End <br>Web Developer</h2>
+
                 </div>
 
             </div>
