--- a/pages/skills.html
+++ b/pages/skills.html
@@ -195,8 +195,10 @@
       <!-- HERO TITLE -->
       <div class="grid-title ">
         <div class="content-title">
-          <h1>Front-End Web Developer</h1>
-          <h2>Boitumelo<span> Shakex</span> Sempe</h2>
+          
+          <h1>Boitumelo<span> Shakex</span> Sempe</h1>
+          <h2><span>Front-End</span> <br>Web Developer</h2>
+
         </div>
 
         
