--- a/index.html
+++ b/index.html
@@ -394,10 +394,11 @@
                 <h3 class="item-title">orich trading & projects</h3>
 
                 <div class="item-description">
-                  <p>fully responsive website featuring: <br>
-                    Direct email & call links. <br>
-                    Web hosting & email accounts</p>
-                </div>
+                  <p>I built a fully responsive website for this Gauteng based construction company.
+                  </p>
+                  
+                  <p>I designed & built the pages using SASS preproccessed CSS-3 stylesheets. <br> The development of the site is SEO & accessibility orientated.</p>
+                  </div>
 
                 <div class="item-cta">
 
@@ -411,6 +412,7 @@
                       alt="right button icon" class="icon">
                   </a>
                 </div>
+
               </div>
 
             </div>
