--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                   <p>I built a fully responsive website for this Gauteng based construction company.
                   </p>
                   
-                  <p>I designed & built the pages using SASS preproccessed CSS-3 stylesheets. <br> The development of the site is SEO & accessibility orientated.</p>
+                  <p>I designed & built the pages using SASS preprocessed CSS-3 stylesheets. <br> The development of the site is SEO & accessibility orientated.</p>
                   </div>
 
                 <div class="item-cta">
