--- a/index.html
+++ b/index.html
@@ -200,9 +200,10 @@
       <!-- HERO TITLE -->
       <div class="grid-title ">
         <div class="content-title">
-          <h1>Boitumelo<span> Shakex</span> Sempe</h1>
-          <!-- <h2>Front-End <br> <span>Web Developer</span></h2> -->
-          <h2><span>Front-End</span> <br>Web Developer</h2>
+
+          <h1><span>Front-End </span>Web Developer</h1>
+          <h2>Boitumelo<span> Shakex</span> Sempe</h1>
+
         </div>
 
 
