style: dark-theme

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         <div class="skill-section-title section-title-1">
           <img class="section-title-image" src="img/keyboard.jpg" loading="lazy" alt="Keyboard">
           <h3>web accessibility & <br> responsive web design</h3>
-          <p>User friendly and Search-Engine-Optimized websites coded to adapt to device sizes & user settings.</p>
+          <p>I code user friendly and Search-Engine-Optimized websites coded to adapt to device sizes & user settings.</p>
           <p></p>
 
           <a href="pages/skills.html#section-1" class="btn btn-light">skills page
