--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
         <div id="footer-bottom" class="footer-bottom">
 
           <!-- FOOTER LOGO -->
-          <a href="pages/design.html">
+          <a href="pages/prices.html">
             <img class="footer-logo" src="img/shakex-html-logo.png" width="400" height="227" loading="lazy"
               alt="Shakex Sempe: Web Developer logo">
           </a>
