--- a/pages/prices.html
+++ b/pages/prices.html
@@ -160,7 +160,7 @@
                 <p>Accessible, Immersive & Engaging <br>
                     <span>responsive web design</span></p>
                 <div class="cta">
-                    <a href="#main" id="hero-cta" class="btn btn-primary">get started
+                    <a href="#main" id="hero-cta" class="btn btn-primary">view prices
                         <img class="icon" src="../icons/solid/icons8-double-right-48-light.png" height="48" width="48"
                             alt="double right icon">
                     </a>
