price-list page

--- a/pages/prices.html
+++ b/pages/prices.html
@@ -213,7 +213,7 @@
                     </h3>
 
                     <ul class="list-item-content">
-                        <li>responsive design</li>
+                        <li>responsive & fluid design</li>
                         <li>Accessibility & in-page SEO</li>
                         <li>monthly hosting <span>R150</span></li>
                     </ul>
@@ -230,6 +230,7 @@
                     <ul class="list-item-content">
                         <li>responsive design</li>
                         <li>Accessibility & Full SEO</li>
+                        <li>Automatic & Manual dark mode</li>
                         <li>monthly hosting <span>R150</span></li>
                     </ul>
 
