--- a/pages/prices.html
+++ b/pages/prices.html
@@ -200,7 +200,6 @@
                     <ul class="list-item-content">
                         <li>responsive design</li>
                         <li>Accessibility & in-page SEO</li>
-                        <li>monthly hosting <span>R150</span></li>
                     </ul>
 
                 </div>
@@ -215,7 +214,6 @@
                     <ul class="list-item-content">
                         <li>responsive & fluid design</li>
                         <li>Accessibility & in-page SEO</li>
-                        <li>monthly hosting <span>R150</span></li>
                     </ul>
 
                 </div>
@@ -230,8 +228,7 @@
                     <ul class="list-item-content">
                         <li>responsive design</li>
                         <li>Accessibility & Full SEO</li>
-                        <li>Automatic & Manual dark mode</li>
-                        <li>monthly hosting <span>R150</span></li>
+                        <li>dark mode</li>
                     </ul>
 
                 </div>
@@ -503,7 +500,7 @@
 
         <!-- NAV-ITEM -->
         <figure class="link-item io-item item io-item-2">
-            <a href="#home" title="Home">
+            <a href="../index.html" title="Home">
                 <img class="icon outline-icon" src="../icons/outline/icons8-homepage-48-light-2.png" height="48"
                     width="48" alt="home page icon">
                 <img class="icon solid-icon" src="../icons/solid/icons8-homepage-48-light.png" height="48" width="48"
@@ -514,7 +511,7 @@
         <!-- NAV ITEM -->
         <figure class="link-item io-item item io-item-3">
 
-            <a title="Footer" href="#footer-bottom">
+            <a title="Footer" href="#">
                 <img class="icon outline-icon" src="../icons/outline/icons8-info-squared-48-light.png" height="48"
                     width="48" alt="four squares icon">
                 <img class="icon solid-icon" src="../icons/solid/icons8-info-squared-48-light.png" height="48"
