index: work intro

--- a/index.html
+++ b/index.html
@@ -381,10 +381,9 @@
         
         <h3>web design & development projects</h3>
         
-        <P>
+        <p>
           I help businesses & professionals establish a strong presences on the internet by coding Responsive and Search Engine Optimized websites.    
-        </P>
-        <p>I also assist with Domain registration & Web Services management 
+          I also assist with Domain registration & Web Services management 
         </p>
         <div class="buttons-container">
 
