--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         
         <p>
           I help businesses & professionals establish a strong presences on the internet by coding Responsive and Search Engine Optimized websites.    
-          I also assist with Domain registration & Web Services management 
+          I also assist with Domain registration & Web Services management. 
         </p>
         <div class="buttons-container">
 
