style: desktop padding - hero & skills && progress bar

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         <div class="work-container">
 
           <!-- ORICH -->
-          <div class="item io-item">
+          <div class="work-item io-item">
             <!-- FLEX: TITLE + CONTENT -->
             <div class="item-flex-container">
 
@@ -451,7 +451,7 @@
           </div>
 
           <!-- MUNCH UP -->
-          <div class="item io-item">
+          <div class="work-item io-item">
             <!-- FLEX: TITLE + CONTENT -->
             <div class="item-flex-container">
               <div class="item-content">
@@ -496,7 +496,7 @@
           </div>
 
           <!-- LEGAL -->
-          <div class="item io-item">
+          <div class="work-item io-item">
             <!-- FLEX: TITLE + CONTENT -->
             <div class="item-flex-container">
               
