--- a/pages/work.html
+++ b/pages/work.html
@@ -237,7 +237,7 @@
                 <div class="work-container">
 
                     <!-- ITEM 1 ORICH -->
-                    <div class="item io-item">
+                    <div class="work-item io-item">
                         <!-- FLEX: TITLE + CONTENT -->
                         <div class="item-flex-container">
                             <div class="item-content">
@@ -271,7 +271,7 @@
                     </div>
 
                     <!-- ITEM 2 -->
-                    <div class="item io-item">
+                    <div class="work-item io-item">
                         <!-- FLEX: TITLE + CONTENT -->
                         <div class="item-flex-container">
                             <div class="item-content">
@@ -304,7 +304,7 @@
                     </div>
 
                     <!-- ITEM 1 -->
-                    <div class="item io-item">
+                    <div class="work-item io-item">
                         <!-- FLEX: TITLE + CONTENT -->
                         <div class="item-flex-container">
                             <div class="item-content">
@@ -337,7 +337,7 @@
                         </div>
                     </div>
                     <!-- ITEM 2 -->
-                    <div class="item io-item">
+                    <div class="work-item io-item">
                         <!-- FLEX: TITLE + CONTENT -->
                         <div class="item-flex-container">
                             <div class="item-content">
@@ -369,7 +369,7 @@
                     </div>
 
                     <!-- ITEM 2 -->
-                    <div class="item io-item">
+                    <div class="work-item io-item">
                         <!-- FLEX: TITLE + CONTENT -->
                         <div class="item-flex-container">
                             <div class="item-content">
@@ -416,7 +416,7 @@
                 <div class="work-container">
                     
                     <!-- ITEM FCC -->
-                    <div class="item io-item">
+                    <div class="work-item io-item">
                         <!-- FLEX: TITLE + CONTENT -->
                         <div class="item-flex-container">
                             <div class="item-content">
@@ -455,7 +455,7 @@
                     </div>
 
                     <!-- ITEM JS -->
-                    <div class="item io-item">
+                    <div class="work-item io-item">
                         <!-- FLEX: TITLE + CONTENT -->
                         <div class="item-flex-container">
                             <div class="item-content">
@@ -491,7 +491,7 @@
                     </div>
 
                     <!-- ITEM FRONT-END MENTOR-->
-                    <div class="item io-item">
+                    <div class="work-item io-item">
                         <!-- FLEX: TITLE + CONTENT -->
                         <div class="item-flex-container">
                             <div class="item-content">
@@ -527,6 +527,7 @@
                     </div>
 
                 </div>
+
             </div>
         </section>
 
