style: prices dark theme

--- a/pages/prices.html
+++ b/pages/prices.html
@@ -215,6 +215,7 @@
                     <ul class="list-item-content">
                         <li>responsive & fluid design</li>
                         <li>Accessibility & in-page SEO</li>
+                        <li>dedicated pages</li>
                     </ul>
 
                 </div>
@@ -229,7 +230,7 @@
                     <ul class="list-item-content">
                         <li>responsive design</li>
                         <li>Accessibility & Full SEO</li>
-                        <li>dark mode</li>
+                        <li>dark mode theme toggle</li>
                     </ul>
 
                 </div>
