added details to about section

--- a/index.html
+++ b/index.html
@@ -601,17 +601,24 @@
               <div class="article-body">
 
                 <!-- BODY ITEMS = ICON + H3 + P + LINK -->
-                <div class="body-item">
-                  <i class="fa-brands fa-free-code-camp"></i>
-                  <h3 class="body-item-title">freeCodeCamp</h3>
-                  <p>Certificate in Responsive Web Design.</p>
-                  <a class="body-item-link" title="Responsive Web Design certificate"
-                    href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design"
-                    target="_blank">
-                    <img src="icons/outline/icons8-right-button-48-dark.png" height="48" width="48"
-                      alt="right button icon" class="icon">
-                    freecodecamp.org/certification/</a>
-                </div>
+                <details class="details">
+
+                  <summary>front-end qualifications</summary>
+
+                  <div class="details-content">
+
+                    <h3 class="details-content-title">freeCodeCamp</h3>
+                    <p>Certificate in Responsive Web Design.</p>
+                    <a class="details-content-link" title="Responsive Web Design certificate"
+                      href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design"
+                      target="_blank">
+                      <img src="icons/outline/icons8-right-button-48-dark.png" height="48" width="48"
+                        alt="right button icon" class="icon">
+                      freecodecamp.org/certification/</a>
+
+                  </div>
+
+                </details>
 
                 <div class="body-item">
                   <i class="fa-solid fa-user-graduate"></i>
